# Machine-Translation-Challenge

./: README.md  pyproject.toml
notebooks/: machine_translation_nllb.ipynb
