[tool.poetry]
name = "machine-translation-challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
huggingface = "^0.0.1"
datasets = "^2.20.0"
transformers = {extras = ["torch"], version = "^4.42.4"}
evaluate = "^0.4.2"
accelerate = "^0.32.1"
sacrebleu = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
